--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-discord.py
-openai
-beautifulsoup4
-requests
-python-dotenv
+py-cord>=2.3.0
+python-dotenv==1.0.0
+openai==0.27.0
+requests==2.28.1
+beautifulsoup4==4.11.1
